--- a/실기-문제/A-2-Green복지재단/html/css/comm.css
+++ b/실기-문제/A-2-Green복지재단/html/css/comm.css
@@ -1,4 +1,7 @@
 @charset "UTF-8";
+
+
+
 /* reset */
 * {
     margin: 0;
@@ -22,7 +25,22 @@ header {
     justify-content: space-between;
     align-items: center;
     height: 100px;
-    border-bottom: 1px solid #eeeeee;
+    border-bottom: 1px solid #434748;
+}
+.gnb::before {
+    content: "";
+    position: absolute;
+    top: 100px;
+    left: 0;
+    width: 1200px;
+    height: 0;
+    background: #434748;
+    transition: all 0.3s;
+
+}
+.gnb:hover::before {
+    height: 130px;
+    
 }
 .gnb .gnb-depth1 {
     display: flex;
@@ -33,16 +51,33 @@ header {
 .gnb .gnb-depth1 > li > a {
     display: block;
     width: 120px;
+    height: 100px;
     font-size: 20px;
     text-align: center;
+    line-height: 100px;
 }
-.gnb .gnb-depth2 {
-    position: absolute;
-    top: 60px;
-    left: 0;
-    width: 100%;
+.gnb .gnb-depth1 > li:hover > a {
+    font-weight: bold;
+    color: #3cb149;
+}
+/* 이후 상태 : h: p: 10px, 0 , op: 1 */
+.gnb .gnb-depth1:hover > li .gnb-depth2 {
+    height: 130px;
     padding: 10px 0;
-    background: #434748;
+    opacity: 1;
+}
+/* 이전 상태 : height: 0, padding: 0, opacity :0 */
+.gnb .gnb-depth2 {
+    overflow: hidden;
+    position: absolute;
+    top: 100px;
+    left: 0;
+    height: 0;
+    width: 100%;
+    padding: 0;
+    opacity: 0;
+    transition: all 0.3s;
+    /* background: #434748; */
 }
 .gnb .gnb-depth2 li a {
     display: block;
@@ -51,7 +86,9 @@ header {
     font-size: 14px;
     text-align: center;
 }
-
+.gnb .gnb-depth2 li a:hover {
+    background: #3cb149;
+}
 .slide {
     overflow: hidden;
     height: 300px;
@@ -157,4 +194,41 @@ footer {
 }
 .family a {
     padding: 10px;
+}
+.modal-dimmed {
+    display: none;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: rgba(0, 0, 0, 0.5);
+}
+.modal-box {
+    padding: 30px;
+    width: 500px;
+    height: 300px;
+    margin-top: 30px;
+    text-align: center;
+    
+    border: 1px solid #eee;
+    background: #fff;
+    border-radius: 5px;
+}
+.modal-box .modal-cont {
+    margin-top: 30px;
+}
+.modal-box .btn-close {
+    position: absolute;
+    top: -20px;
+    right: -20px;
+    width: 50px;
+    height: 50px;
+    border-radius: 50px;
+    background: #000;
+    color: #fff;
+    font-size: 40px;
+    cursor: pointer;
 }
