--- a/실기-완성/D-1-조이컨트리클럽/css/comm.css
+++ b/실기-완성/D-1-조이컨트리클럽/css/comm.css
@@ -13,11 +13,13 @@
 
 .inner {
   display: flex;
+  /* height: 850px; */
   background-color: rgb(219, 236, 255);
 }
 header {
+  position: relative;
   width: 200px;
-  background-color: rgb(7, 7, 7);
+  background-color: rgb(16, 16, 16);
 }
 .logo a {
   display: block;
@@ -41,12 +43,24 @@ header {
 #gnb .depth1 a::after {
   content: ">";
   position: absolute;
-  top: 0;
+  top: 10px;
   right: 0;
+  opacity: 0.5;
+  transition: all 0.3s;
+}
+#gnb .depth1 > .active > a::after {
+  transform: rotate(90deg);
+}
+#gnb .active .depth2 {
+  padding-top: 10px;
+  max-height: 500px;
 }
 #gnb .depth2 {
   /* display: none; */
-  padding-top: 10px;
+  padding-top: 0;
+  max-height: 0;
+  overflow: hidden;
+  transition: all 0.3s;
 }
 #gnb .depth2 a {
   display: block;
@@ -54,14 +68,78 @@ header {
   font-size: 14px;
 }
 #gnb .depth2 a:hover {
-  background-color: #fffff;
-  color: #ffffff;
+  background-color: #000;
+  /* background-color: #82ffc0; */
+  /* color: #000; */
+  color: #82ffc0;
+  /* color: #43a041; */
+}
+.util {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: absolute;
+  bottom: 10px;
+  left: 50%;
+  transform: translateX(-50%);
+}
+.util a {
+  position: relative;
+  display: block;
+  padding: 5px;
+}
+.util a::before {
+  content: "";
+  position: absolute;
+  top: 8px;
+  left: 0;
+  width: 1px;
+  height: 15px;
+  background: #4e4e4e;
+  /* opacity: 0.5; */
+}
+util a:first-child::before {
+  display: none;
+}
+.util span {
+  display: block;
+  margin-top: -5px;
+  opacity: 0.5;
 }
 main {
   flex-grow: 1;
   /* width: calc(100% - 200px); */
   background-color: rgb(0, 0, 0);
+  position: relative;
 }
+.quick {
+  position: absolute;
+  top: 0;
+  right: 0;
+  background-color: #eee;
+}
+.quick a {
+  text-align: center;
+  margin-bottom: 10px;
+  display: block;
+  color: #000;
+}
+.quick img {
+  display: block;
+  width: 80px;
+  height: 100px;
+}
+.slide {
+  height: 400px;
+}
+.banner {
+  height: 200px;
+  background: #4e4e4e;
+}
+.tabs-wrap {
+  height: 250px;
+}
+
 footer {
   background-color: rgb(69, 69, 69);
   height: 100px;
