--- a/실기-완성/D-1-조이컨트리클럽/css/comm.css
+++ b/실기-완성/D-1-조이컨트리클럽/css/comm.css
@@ -108,7 +108,7 @@ util a:first-child::before {
 }
 main {
   flex-grow: 1;
-  /* width: calc(100% - 200px); */
+  width: calc(100% - 200px);
   background-color: rgb(0, 0, 0);
   position: relative;
 }
@@ -131,10 +131,34 @@ main {
 }
 .slide {
   height: 400px;
+  overflow: hidden;
+  position: relative;
+}
+.slide ul {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+.slide img {
+  display: block;
+  width: 100%;
+  height: 400px;
+  object-fit: cover;
+  object-position: 0 50%;
 }
 .banner {
   height: 200px;
+  padding: 20px;
   background: #4e4e4e;
+}
+.banner a {
+  display: block;
+}
+.banner img {
+  display: block;
+  width: 100%;
+  height: 160px;
+  object-fit: cover;
 }
 .tabs-wrap {
   height: 250px;
